[package]
name = "yic-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
env_logger = "0.11.6"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
openid = "0.16.1"
dotenv = "0.15"
